third_party/llvm-project/llvm/test/CodeGen/MIR/AMDGPU/machine-function-info-dynlds-align-invalid-case.mir
# RUN: not llc -mtriple=amdgcn-amd-amdhsa -run-pass=none -verify-machineinstrs %s -o - 2>&1 | FileCheck %s

---
# CHECK: error: YAML:8:16: must be a power of two

name: dyn_lds_with_alignment
machineFunctionInfo:
  dynLDSAlign: 9

body:             |
  bb.0:
    S_ENDPGM 0

...
